# soft-engg-project-sep-2025-se-SEP-25

./: .gitignore  DAILY_REPORTS_DOCUMENTATION.md  README.md  package-lock.json
backend/: .env-dev  .env.example  .gitignore  CELERY_README.md  MAILHOG_SETUP.md  Makefile  README.md  imp_requests.http  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  celery_app.py  config.py
backend/app/api/: API.py  __init__.py
backend/app/controllers/: __init__.py  hr_controller.py
backend/app/core/: __init__.py
backend/app/database/: __init__.py  admin_models.py  connection.py  employee_models.py  hr_models.py  models.py  product_manager_models.py  seed.py
backend/app/middleware/: __init__.py
backend/app/services/: requirement_agent.py
backend/app/tasks/: __init__.py  email_tasks.py  notification_tasks.py  report_tasks.py  requirement_tasks.py
backend/app/utils/: __init__.py  email.py
backend/tests/: README.md  conftest.py  test_user_login.py
backend/tests/admin/: demo_test_admin_apis.py  test_admin_apis.py  test_admin_login.py
backend/tests/employee/: conftest.py  test_account.py  test_assistant.py  test_dashboard.py  test_hr_faq.py  test_learning.py  test_request.py  test_writing.py
backend/tests/hr/: conftest.py  test_employees.py  test_policies.py  test_reviews.py
backend/tests/login/: test_user_login.py
backend/tests/pm/: conftest.py  test_1_projects.py  test_client_requirements.py  test_client_updates.py  test_clients.py  test_dashboard.py  test_employee.py  test_employee_performance.py  test_pm_apis.py  test_pm_apis_delete.py  (+20 more)
(+735 files in other folders)
