[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0",
    "chromadb>=1.3.5",
    "fastapi==0.120.1",
    "fastapi-restful==0.6.0",
    "httpx>=0.28.1",
    "jose==1.0.0",
    "langchain-community>=0.4.1",
    "psycopg2>=2.9.11",
    "pydantic==2.12.3",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "redis>=7.1.0",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "typing-inspect>=0.9.0",
    "uvicorn==0.38.0",
]
